# data-transfer

collector/: Cargo.toml  uuid
collector/src/: main.rs
server/: Cargo.toml  collection.db  collection.db-shm  collection.db-wal
server/src/: collector.html  collector.rs  main.rs
shared_data/: Cargo.toml
shared_data/src/: lib.rs
