[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-server = "0.7.1"
dotenv = "0.15.0"
futures = "0.3.30"
serde = { version = "1.0.209", features = ["derive"] }
shared_data = {path = "../shared_data"}
sqlx = { version = "0.8.1", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.39.3", features = ["full"] }
uuid = "1.10.0"
